--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/site.scss
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/site.scss
@@ -213,3 +213,11 @@
 .app-wrap-anywhere {
     overflow-wrap: anywhere;
 }
+
+/*todo: a bit skanky, but a quick fix */
+.width-20 {
+    width: 20%;
+}
+.width-40 {
+    width: 40%;
+}
