--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
@@ -26,14 +26,14 @@
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
 
-                        <component type="typeof(Components.SortHeaderComponent)" param-Title='"Organisation"' param-Name='@Model.OrganisationColumn' param-SortBy='@Model.SortBy' param-Style='"width: 40%"' param-DataIndex='0' render-mode="Static" />
+                        <component type="typeof(Components.SortHeaderComponent)" param-Title='"Organisation"' param-Name='@Model.OrganisationColumn' param-SortBy='@Model.SortBy' param-Class='"width-40"' param-DataIndex='0' render-mode="Static" />
 
                         @if (Model.IsDfeAdmin)
                         {
-                            <component type="typeof(Components.SortHeaderComponent)" param-Title='"Local authority"' param-Name='@Model.LaColumn' param-SortBy='@Model.SortBy' param-Style='"width: 40%"' param-DataIndex='1' render-mode="Static" />
+                            <component type="typeof(Components.SortHeaderComponent)" param-Title='"Local authority"' param-Name='@Model.LaColumn' param-SortBy='@Model.SortBy' param-Class='"width-40"' param-DataIndex='1' render-mode="Static" />
                         }
 
-                        <th scope="col" class="govuk-table__header govuk-table__header--numeric" style="width: 20%"></th>
+                        <th scope="col" class="govuk-table__header govuk-table__header--numeric width-20"></th>
 
                     </tr>
                 </thead>
