--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/site.scss
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/site.scss
@@ -214,6 +214,10 @@
     overflow-wrap: anywhere;
 }
 
+.app-am-pm-select {
+    min-width: 2em;
+}
+
 /*todo: a bit skanky, but a quick fix */
 .width-20 {
     width: 20%;
