remove sorting for action column

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
@@ -12,7 +12,7 @@
 
             <component type="typeof(Components.SortHeaderComponent)" param-Title='"Works for"' param-Name='"Organisation"' param-SortBy='@Model.SortBy' param-Class='"width-40"' param-DataIndex='2' render-mode="Static" />
 
-            <th scope="col" class="govuk-table__header govuk-table__header--numeric width-20" aria-sort="none"></th>
+            <th scope="col" class="govuk-table__header govuk-table__header--numeric width-20"></th>
 
         </tr>
     </thead>
