fix table sorting

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.IndexModel
 
-<table class="govuk-table" data-module="moj-sortable-table">
+<table class="govuk-table">
 
     <thead class="govuk-table__head">
         <tr class="govuk-table__row">
