--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
@@ -21,7 +21,7 @@
 
     <form method="post">
         <div class="govuk-grid-column-two-thirds">
-            <table class="govuk-table" data-module="moj-sortable-table">
+            <table class="govuk-table">
 
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
