--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -7,27 +7,24 @@
 @section Head {
     <link rel="stylesheet" href="~/css/accessible-autocomplete.min.css" asp-append-version="true" />
 }
-    
+
 @section Scripts {
     <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>
 
-    <script>
+    <script>        
         let selectElement = document.querySelector('#LaOrganisationName');
-        
-        function getValue(val) {
-            if (val === null) {
-                return "";
-            }
-            return val;
-        }
-        
+    
+        var name = document.getElementById('modelLaOrganisationName').value;
+
         accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: getValue(@Json.Serialize(Model.LaOrganisationName)),
+            defaultValue: name,
             name: 'LaOrganisationName',
             selectElement: selectElement
         })
     </script>
 }
+
+<input type="hidden" id="modelLaOrganisationName" value="@Model.LaOrganisationName" />
 
 <div class="govuk-form-group">
     <label class="govuk-label" for="LaOrganisationName">
