--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_filter.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_filter.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.IndexModel
 
-<button type="button" class="govuk-button govuk-button--secondary filters-mobile" id="buttonFilters" onclick="displayFilters();">Show filters</button>
-<button type="button" class="govuk-button govuk-button--secondary filters-mobile govuk-!-display-none" id="buttonFilters2" onclick="hideFilters();">Hide filters</button>
+<button type="button" class="govuk-button govuk-button--secondary filters-mobile" id="buttonShowFilters" >Show filters</button>
+<button type="button" class="govuk-button govuk-button--secondary filters-mobile govuk-!-display-none" id="buttonHideFilters" >Hide filters</button>
 
 <div class="filters-component panel-component__content" id="filters-component" data-controller="filters">
     <div class="filters-component__heading">
@@ -90,19 +90,3 @@
 
     <p><a asp-page-handler="ClearFilters">Clear filters</a></p>
 </div>
-
-@*todo: inline scripts will be disabled (if we can get GA to work without them) *@
-@*todo: better to not use jquery (govuk has removed jquery) *@
-<script>
-    function displayFilters() {
-        $("#filters-component").toggle();
-        $("#buttonFilters").toggle();
-        document.getElementById("buttonFilters2").classList.remove("govuk-!-display-none");
-    }
-    function hideFilters() {
-        $("#filters-component").toggle();
-        $("#buttonFilters").toggle();
-        document.getElementById("buttonFilters2").classList.add("govuk-!-display-none");
-
-    }
-</script>
