--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
@@ -9,25 +9,9 @@
 }
     
 @section Scripts {
-    <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>
-
-    <script>
-        let selectElement = document.querySelector('#VcsOrganisationName');
-
-        function getValue(val) {
-            if (val === null) {
-                return "";
-            }
-            return val;
-        }
-
-        accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: getValue(@Json.Serialize(Model.VcsOrganisationName)),
-            name: 'VcsOrganisationName',
-            selectElement: selectElement
-        })
-    </script>
+    <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>  
 }
+<input type="hidden" id="modelVcsOrganisationName" value="@Model.VcsOrganisationName" />
 
 <div class="govuk-form-group">
     <div class="govuk-hint govuk-!-margin-top-2">
