--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
@@ -10,24 +10,10 @@
 
 @section Scripts {
     <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>
-
-    <script>
-        let selectElement = document.querySelector('#LaOrganisationName');       
-
-        function getValue(val){
-            if ( val === null){
-                return "";
-            }
-            return val;
-        }
-
-        accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: getValue(@Json.Serialize(Model.LaOrganisationName)),
-            name: 'LaOrganisationName',
-            selectElement: selectElement
-        })
-    </script>
 }
+
+<input type="hidden" id="modelLaOrganisationName" value="@Model.LaOrganisationName" />
+
 
 <div class="govuk-form-group">
     <label class="govuk-label" for="LaOrganisationName">
