--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -133,5 +133,17 @@
                     }
                 </div>
             }
+
+        @if (Model.ShowSubjectAccessRequestSection)
+        {
+            <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='@Model.SubjectAccessRequestText' render-mode="Static" />
+
+            <div class="card">
+                <h3 class="govuk-heading-s">
+                    <a asp-area="SubjectAccessRequest" asp-page="/PersonsDetails">Subject Access Request</a>
+                </h3>
+                <p class="govuk-body-s">Find information stored about a person.</p>
+            </div>
+        }
         </div>
     </div>
