Fixed back button

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/La/RequestDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/La/RequestDetails.cshtml
@@ -15,7 +15,7 @@
 }
 
 @section Back {
-    <a asp-page="SubjectAccessResultDetails" asp-area="SubjectAccessRequest" class="govuk-back-link">Back</a>
+    <a href="/SubjectAccessRequest/SubjectAccessResultDetails"  class="govuk-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
