Moved Subject Access Requests to another location

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/La/PersonsDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/La/PersonsDetails.cshtml
@@ -9,7 +9,7 @@
 }
 
 @section Back {
-    <a asp-page="\Welcome" class="govuk-back-link">Back</a>
+    <a href="/Welcome" class="govuk-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
