--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CookiePolicy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CookiePolicy.cshtml
@@ -23,12 +23,12 @@
     </thead>
     <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell">manage_family_support_cookies_policy</td>
+            <td class="govuk-table__cell app-wrap-anywhere">manage_family_support_cookies_policy</td>
             <td class="govuk-table__cell">Saves your cookie consent settings</td>
             <td class="govuk-table__cell">1 year</td>
         </tr>
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell">.AspNetCore.Antiforgery.[random number]</td>
+            <td class="govuk-table__cell app-wrap-anywhere">.AspNetCore.Antiforgery.[random number]</td>
             <td class="govuk-table__cell">Prevents malicious activity while you’re using the website</td>
             <td class="govuk-table__cell">When you leave the website</td>
         </tr>
@@ -72,7 +72,7 @@
             </td>
         </tr>
         <tr>
-            <td class="govuk-table__cell">
+            <td class="govuk-table__cell app-wrap-anywhere">
                 _ga_[random number]
             </td>
             <td class="govuk-table__cell">
