Add subject access request (#264)
* Add Getting Persons Details and showing initial results

* Added Request Details page

* Fixed back button

* Moved Subject Access Requests to another location

* Added Unit Tests

* Modified Validation

* Fixed Error Messages

* Fixed Unit Tests

* Tweak to error messages for Subject Access Request

* Added Authorize Attribute to RequestDetailsModel

* Removed commented out code

* Delete src/FamilyHubs.ServiceDirectory.Admin.Web/ScaffoldingReadMe.txt

Removed unwanted file

---------

Co-authored-by: Martin-Belton-gov <martin.belton@digital.education.gov.uk>

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -133,5 +133,17 @@
                     }
                 </div>
             }
+
+        @if (Model.ShowSubjectAccessRequestSection)
+        {
+            <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='@Model.SubjectAccessRequestText' render-mode="Static" />
+
+            <div class="card">
+                <h3 class="govuk-heading-s">
+                    <a href="/La/PersonsDetails" >Subject Access Request</a>
+                </h3>
+                <p class="govuk-body-s">Find information stored about a person.</p>
+            </div>
+        }
         </div>
     </div>
