--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserEmail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserEmail.cshtml
@@ -10,4 +10,4 @@
     They will use this to sign in to their account.
 </div>
 
-<input class="govuk-input @errorCss" id="emailAddress" asp-for="@Model.EmailAddress" type="text" maxlength="255" autocomplete="off">
+<input class="govuk-input @errorCss" id="emailAddress" asp-for="@Model.EmailAddress" type="text" maxlength="255" autocomplete="off" title="Email Address">
