#FHG-4434 add premissions name screen add label

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserName.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/UserName.cshtml
@@ -6,4 +6,4 @@
     Model.ErrorElementId = "fullName";
 }
 
-<input class="govuk-input @errorCss" id="fullName" asp-for="@Model.FullName" type="text" maxlength="255" autocomplete="off">
+<input class="govuk-input @errorCss" id="fullName" asp-for="@Model.FullName" type="text" maxlength="255" autocomplete="off" title="Full Name">
