#FHG-4450 fix all accessibility issues

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
@@ -18,7 +18,7 @@
         Their organisation must be in the directory for it to appear here. If it's not, you can <a asp-page-handler="AddOrganisation" id="add-organisation">add an organisation</a>.        
     </div>    
     
-    <label class="govuk-label" for="VcsOrganisationName">
+    <label class="govuk-label" for="VcsOrganisationName" aria-label="Organisation Name">
         <!---Select local authority--->
     </label>
     <select class="govuk-select" id="VcsOrganisationName" name="VcsOrganisationName" aria-describedby="VcsOrganisationName-hint">
