--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
@@ -16,7 +16,7 @@
 
 
 <div class="govuk-form-group">
-    <label class="govuk-label" for="LaOrganisationName">
+    <label class="govuk-label" for="LaOrganisationName" aria-label="Organisation Name">
         <!---Select local authority--->
     </label>
     <select class="govuk-select" id="LaOrganisationName" name="LaOrganisationName" aria-describedby="LaOrganisationName-hint">
