--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
@@ -45,7 +45,7 @@
                     <div class="govuk-radios" data-module="govuk-radios">
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="removeOrg" type="radio" asp-for="DeleteOrganisation" value="true">
-                            <label class="govuk-label govuk-radios__label" for="remove-org">
+                            <label class="govuk-label govuk-radios__label" for="removeOrg">
                                 Yes, I want to delete it
                             </label>
                         </div>
