--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -15,7 +15,7 @@
 <input type="hidden" id="modelLaOrganisationName" value="@Model.LaOrganisationName" />
 
 <div class="govuk-form-group">
-    <label class="govuk-label" for="LaOrganisationName">
+    <label class="govuk-label" for="LaOrganisationName" aria-label="Organisation Name">
         <!---Select local authority--->
     </label>
     <select class="govuk-select" id="LaOrganisationName" name="LaOrganisationName" aria-describedby="LaOrganisationName-hint">
