--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
@@ -4,25 +4,39 @@
     ViewData["Title"] = "Manage family support services and accounts";
 }
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-            <h1 class="govuk-heading-l">Manage family support services and accounts</h1>
+        <h1 class="govuk-heading-l">Manage family support services and accounts</h1><p>This service is for people working in local authorities or voluntary and community sector organisations.</p>
+        <p>It allows you to manage your organisation and services on <a href="@Model.ConnectUrl">Connect families to support</a> and <a href="@Model.FindUrl">Find support for your family.</a></p>
 
-            <p>This is to manage family support services.</p>
-            <p>Use this to:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>add local authorities</li>
-                <li>add VCS organisations to the directory</li>
-                <li>view organisations you have added to the directory </li>
-            </ul>
+        <h2 class="govuk-heading-m">Local authority users</h2>
 
-            <a asp-page="/Welcome" class="govuk-button govuk-button--start">
-                Start now
-                <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-                    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-                </svg>
-            </a>
+        <p>If you're a local authority user you can add, update and remove:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>local authority services and family hubs</li>
+            <li>local authority users</li>
+            <li>voluntary and community sector organisations</li>
+            <li>voluntary and community sector users</li>
+        </ul>
+
+        <h2 class="govuk-heading-m">Voluntary and community sector users</h2>
+        <p>If you're a voluntary and community sector user, you can:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>add your organisation’s support services</li>
+            <li>update your organisation’s services when details change</li>
+        </ul>
+
+        <div class="govuk-inset-text">
+            This service uses GOV.UK One Login which is managed by the Government Digital Service. You can sign in to your account, or create a One Login account, in this service.
         </div>
 
+        <a asp-page="/Welcome" class="govuk-button govuk-button--start">
+            Start now
+            <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+                <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+            </svg>
+        </a>
+
     </div>
+</div>
