change name wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FamilyHubs.ServiceDirectory.Admin.Web.ViewModel.MyAccountViewModel
 @{
-    var errorGroupCss = Model.HasValidationError ? "govuk-form-group--error" : "";
+    // var errorGroupCss = Model.HasValidationError ? "govuk-form-group--error" : "";
     Layout = "~/pages/Shared/_Layout.cshtml";
 }
 @if (Model.HasBackButton)
@@ -8,8 +8,10 @@
     <a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 }
 
+@RenderBody()
+
 @* todo:components *@
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+@* <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
@@ -48,3 +50,4 @@
         </div>
     </div>
 </main>
+ *@
