--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ChangeName.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ChangeName.cshtml
@@ -10,6 +10,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <div class="govuk-form-group">
+            <form method="post" novalidate>
             <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                     <h1 class="govuk-fieldset__heading">
@@ -18,32 +19,30 @@
                 </legend>
             @*                 <div class="govuk-form-group @errorGroupCss">
  *@
-                <div class="govuk-form-group @(error?.FormGroupClass)">
+            <div class="govuk-form-group @(error?.FormGroupClass)">
                 <partial name="_ErrorMessage" model="@error" />
 
-@*                 @if (Model.HasValidationError)
+                @*                 @if (Model.HasValidationError)
                 {
                     <span class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> @Model.ErrorMessage</span>
                 }
  *@
-                <form method="post" novalidate="" data-validate="my-form-validation">
 
-@*                     <div class="govuk-form-group"> *@
-                        <label for="new-name" class="govuk-label">Name</label>
-                        <input type="text" id="new-name" class="govuk-input govuk-!-width-one-half @error?.InputClass" asp-for="@Model.FullName" maxlength="255" aria-describedby="@(error?.InputErrorMessageParaId)" />
-@*                     </div> *@
+                    @*                     <div class="govuk-form-group"> *@
+                    <label for="new-name" class="govuk-label">Name</label>
+                    <input type="text" id="new-name" class="govuk-input govuk-!-width-one-half @error?.InputClass" asp-for="@Model.FullName" maxlength="255" aria-describedby="@(error?.InputErrorMessageParaId)" />
+                    @*                     </div> *@
                     @* what was this here for? spacing? *@
                     @*                         <div class="govuk-form-group"></div> *@
 
-                    <button type="submit" class="govuk-button" data-module="govuk-button">
-                        Save
-                    </button>
-                </form>
-                <p><a asp-page="@Model.PreviousPageLink">Cancel</a></p>
-
-
             </div>
+            <button type="submit" class="govuk-button" data-module="govuk-button">
+                Save
+            </button>
+            <p><a asp-page="@Model.PreviousPageLink">Cancel</a></p>
+
             </fieldset>
+            </form>
 
 
             </div>
