--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -4,24 +4,28 @@
     ViewData["Title"] = "Manage your account";
 }
 
-<fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">
-            Manage your account
-        </h1>
-    </legend>
-    <table class="govuk-table govuk-!-margin-top-2">
-        <tbody class="govuk-table__body">
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">Name</th>
-                <td class="govuk-table__cell">@Model.FullName</td>
-                <td class="govuk-table__cell govuk-table__cell--numeric"><a asp-page="/ChangeName">Change</a></td>
-            </tr>
-        </tbody>
-    </table>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <h1 class="govuk-fieldset__heading">
+                    Manage your account
+                </h1>
+            </legend>
+            <table class="govuk-table govuk-!-margin-top-2">
+                <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Name</th>
+                    <td class="govuk-table__cell">@Model.FullName</td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><a asp-page="/ChangeName">Change</a></td>
+                </tr>
+                </tbody>
+            </table>
 
-    <p><a class="govuk-link--no-visited-state" href="@Model.GovOneLoginAccountPage" target="_blank">Manage your GOV.UK One Login details</a></p>
+            <p><a class="govuk-link--no-visited-state" href="@Model.GovOneLoginAccountPage" target="_blank">Manage your GOV.UK One Login details</a></p>
 
-    <p>To delete your account, contact your administrator.</p>
+            <p>To delete your account, contact your administrator.</p>
 
-</fieldset>
+        </fieldset>
+    </div>
+</div>
