--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -12,6 +12,7 @@
                     Manage your account
                 </h1>
             </legend>
+            @* todo: looks like this should be a summary list, and why are cells numeric?? *@
             <table class="govuk-table govuk-!-margin-top-2">
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
