--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_ViewImports.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@namespace FamilyHubs.ServiceDirectory.Admin.Web.Areas.MyAccount
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, FamilyHubs.SharedKernel.Razor
