--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Manage your account";
 }
 
+@section Back {
+    <a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+}
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
