--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Back {
-    <a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+    <a asp-page="/Welcome" class="govuk-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
