--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ChangeNameConfirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ChangeNameConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.MyAccount.Pages.ChangeNameConfirmationModel
+@model ChangeNameConfirmationModel
 @{
     ViewData["Title"] = "You have changed your name";
 }
