--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_ViewStart.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_ViewStart.cshtml
@@ -3,6 +3,6 @@
 @model Microsoft.AspNetCore.Mvc.RazorPages.PageModel
 
 @{
-    Layout = "./_Layout.cshtml";
+    Layout = "~/pages/Shared/_Layout.cshtml";
     ViewStart.InitialiseFamilyHubs(FamilyHubsLayoutModel, Model, ViewData);
 }
