Fixed remaining content changes

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -21,13 +21,13 @@
                         <h3 class="govuk-heading-s">
                             <a asp-page-handler="AddPermissionFlow" id="add-permission">Add permissions</a>
                         </h3>
-                        <p class="govuk-body-s">Add account permissions to manage family support services and manage connection requests.</p>
+                        <p class="govuk-body-s">Add a user account to manage support services or connection requests.</p>
                     </div>
                     <div class="card">
                         <h3 class="govuk-heading-s">
                             <a href="AccountAdmin/ManagePermissions">Manage permissions</a>
                         </h3>
-                        <p class="govuk-body-s">View and remove account permissions to manage family support services or manage connection requests.</p>
+                        <p class="govuk-body-s">View, edit or delete user accounts to manage support services or connection requests.</p>
                     </div>
                 </div>
             }
