--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -19,13 +19,13 @@
                 <div class="cards">
                     <div class="card">
                         <h3 class="govuk-heading-s">
-                            <a asp-page-handler="AddPermissionFlow" id="add-permission">Add permissions</a>
+                            <a asp-page-handler="AddPermissionFlow" id="add-permission">Add a user</a>
                         </h3>
                         <p class="govuk-body-s">Add a user account to manage support services or connection requests.</p>
                     </div>
                     <div class="card">
                         <h3 class="govuk-heading-s">
-                            <a href="AccountAdmin/ManagePermissions">Manage permissions</a>
+                            <a href="AccountAdmin/ManagePermissions">Manage users</a>
                         </h3>
                         <p class="govuk-body-s">View, edit or delete user accounts to manage support services or connection requests.</p>
                     </div>
