Added Logout Timeout

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -5,6 +5,31 @@
     var organisationName = Model.FamilyHubsUser.OrganisationId == "-1" ? "Department for Education" : Model.OrganisationViewModel.Name;
 }
 
+<link type="text/css" rel="stylesheet" href="/css/hmrc-design-system.min.css" media="all">
+
+<meta name="hmrc-timeout-dialog"
+      content="hmrc-timeout-dialog"
+      data-language="en"
+      data-timeout="30"
+      data-countdown="300"
+      data-keep-alive-url="?continue=true"
+      data-sign-out-url="timed-out"
+      data-timeout-url="timed-out"
+      data-title="You’re about to be signed out"
+      data-message="For your security, you will be signed out of this service in"
+      data-message-suffix="The details you have entered will not be saved."
+      data-keep-alive-button-text=""
+      data-sign-out-button-text=""
+      data-synchronise-tabs="" />
+
+<!-- Define a hidden popup div -->
+@* <div id="inactivity-popup" class="govuk-box-shadow-lg ispopup"></div>  *@
+
+@* <div id="modal">
+    <div class="close" onClick="hideModal()">&times;</div>
+    <iframe add-nonce name="modal_iframe" src="/LogInTimeout"></iframe>
+</div> *@
+
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             
@@ -147,3 +172,6 @@
         }
         </div>
     </div>
+
+@* <script src="~/js/inactivitytimer.js"></script> *@
+<script src="~/js/hmrc-design-system.js"></script>
