show action links on SAR pages

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/La/RequestDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/La/RequestDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using FamilyHubs.ServiceDirectory.Admin.Core.ApiClient;
-@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.SubjectAccessRequest.Pages.La.RequestDetailsModel
+@model RequestDetailsModel
 @{
     // string pageNamePrefix = (ReferralStatus) (int) Model.Referral.Status.Id switch
     // {
